[project]
name = "joycaption_comfyui"
description = "Nodes for running the JoyCaption image captioner VLM."
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["transformers>=4.51", "torchvision", "torch>=2.6.0", "huggingface-hub>=0.30.1", "accelerate", "bitsandbytes"]

[project.urls]
Repository = "https://github.com/fpgaminer/joycaption_comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fpgaminer"
DisplayName = "joycaption_comfyui"
Icon = ""

[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
# If you lint, don't flag tabs as an error:
ignore = ["W191"]